<?xml version="1.0"?>
<package format="2">
  <name>qualisys</name>
  <version>0.0.1</version>
  <description>Convert msg of Qualisys to ROS compatible format</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>Apache 2</license>
  <author>Kartik Mohta</author>
  <url type="repository">https://github.com/kartikmohta/qualisys</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <build_export_depend>message_runtime</build_export_depend>

  <export>
  </export>
</package>
